--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,6 @@
    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-  <script src="app.js"></script>
+ <script src="app-v2.js"></script>
 </body>
 </html>
