--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="styles.css" />
 
   <meta name="theme-color" content="#fce4ec" />
+  <link rel="icon" type="image/png" href="/icons/icon-192.png">
 </head>
 <body>
 
@@ -68,6 +69,6 @@
    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
- <script src="app-v2.js"></script>
+ <script src="app.js"></script>
 </body>
 </html>
